# src/api/etude.ts
@@ -1,5 +1,5 @@
 import api from './index';
-import { EtudeDTO } from '../types';
+import { EtudeDTO, EtudeDetailDTO } from '../types';
 
 export const createEtude = async (etude: EtudeDTO) => {
   const { data } = await api.post('/etude', etude);
@@ -19,4 +19,9 @@ export const getEtudesByBureauId = async (bureauId: number): Promise<EtudeDTO[]>
 export const getEtudesByClientId = async (clientId: number): Promise<EtudeDTO[]> => {
   const { data } = await api.get(`/etude/client/${clientId}`);
   return data ?? [];
+};
+
+export const getEtudeDetailById = async (id: number): Promise<EtudeDetailDTO> => {
+  const { data } = await api.get(`/etude/${id}/detail`);
+  return data;
 };
